# finn_lke

./: README.md  README_preprocessor.md
FINNv1/: README_v1.md
FINNv1/run/: finn_fire.inp
FINNv1/src/: Makefile  Makefile.omp  Makefile_pgf95  finn_fire_emis.f90  make_finn
FINNv2.5/: FINNv2.5_preprocessor_description.md  README_v2.5.md  README_v2.md
FINNv2.5/grid_finn_fortran/src/: PolyUtils.c  fire_emis  fire_emis.f90  fire_utils.f90  glb_utils.f90  make_fire_emis
FINNv2.9/: README_v2.9.md
FINNv2.9/emis_calc/: emis_calc.pbs  finn2_9_1_calc_emis_archive.pro  finn2_9_1_calc_emis_nrt_daily.pro
FINNv2.9/emis_calc/finn_inputs/: EFs_byGenVeg_NEIVA_MOZART_c20260209.csv
FINNv2.9/finn_preproc_py/: DESIGN.md  pyproject.toml
FINNv2.9/finn_preproc_py/finn_py/: __init__.py  af_io.py  af_io_old.py  cli.py  config.py  export.py  geometry.py  pipeline.py  raster_pipeline.py  rasters.py  step1.py  step1_old.py  step2.py
FINNv2.9/finn_preproc_py/scripts/: build_global_rasters.py  catchup_finnpy_nrt.pbs  catchup_grid_nrt.pbs  cron_run_finnpy_nrt.sh  run_daily_nrt.py  run_finnpy_nrt_daily.pbs  work_archive.pbs  work_archive.py  work_nrt.py  work_raster.py
